=== 0.1.3 ===

[ Curtis Holt ]
- select_only now ensures the object is set to active.
- + get_node_group
- + get_all_node_groups
- + replace_duplicate_nodes
- + fix_node_duplicates
- + fix_duplicate_nodes (con-func)

=== 0.1.2 ===

[ Curtis Holt ]
- get_material now returns a reference to first material on active object if no arguments are provided.
- + remove_materials
- + remove_all_materials
- + set_fluid_type
    (Removed Functions)
    x set_fluid_type_none
    x set_fluid_type_domain
    x set_fluid_type_flow
    x set_fluid_type_effector
- + fluid_set_flow_type - Simplified function for setting the type of flow.
    Allowed arguments are: SMOKE, FIRE, BOTH, FIRE_SMOKE, SMOKE_FIRE, LIQUID
    (Removed Functions)
    x flow_type_set_smoke
    x flow_type_set_fire
    x flow_type_set_fire_smoke
    x flow_type_set_fluid
- + fluid_set_domain_type - Simplified function for setting the type of domain.
    Allowed arguments are: GAS, LIQUID
    (Removed Functions)
    x fluid_domain_set_gas
    x fluid_domain_set_liquid
- Renamed duplicate function name 'fluid_cache_format' to 'fluid_cache_compress_type'.
- Renamed fluid_cache_precision_vol to fluid_cache_precision

- + select_only to deselect all objects before selecting a given argument.
- + get_index_of_output
- + get_index_of_input

=== 0.1.1 ===

[ Curtis Holt ]
- add_modifier - now accepts lists of objects as an input
- add_mofifier - now returns a list of created modifiers if more than one is created
- + remove_modifiers
- + remove_all_modifiers con-func
- + remove_unused_material_slots
- + remove_unused_slots con-func

[ Yohello ]
- + set_fluid_type_none
- + set_fluid_type_domain
- + set_fluid_type_flow
- + set_fluid_type_effector
- + fluid_effector_type
- + fluid_effector_subsample_value
- + fluid_effector_thickness_value
- + fluid_effector_use_toggle
- + fluid_effector_is_planar_toggle
- + fluid_effector_velocity
- + fluid_effector_guide_mode
- + flow_type_set_smoke
- + flow_type_set_fire